[package]
name = "ago-ci-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
blocking = "1.1.0"
futures = "0.3.21"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.8.2", features = ["v4"] }